--- a/apiproject/.gitignore
+++ b/apiproject/.gitignore
@@ -1,2 +1,8 @@
 env/**
 __pycache__/
+**/static/**
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
