fixed issue with deployment configs, auto deploy currently not working

--- a/apiproject/.ebextensions/django.config
+++ b/apiproject/.ebextensions/django.config
@@ -1,5 +1,5 @@
 option_settings:
   aws:elasticbeanstalk:container:python:
-    WSGIPath: apiproject/apiproject/wsgi.py
+    WSGIPath: apiproject/wsgi.py
   aws:elasticbeanstalk:container:python:staticfiles:
-    "/static/": "apiproject/apiproject/static/"
+    "/static/": "apiproject/static/"
