--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -13,6 +13,7 @@
     "mocha": "^7.1.1",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
+    "react-datepicker": "^2.14.1",
     "react-dom": "^16.13.0",
     "react-paginate": "^6.3.2",
     "react-router-dom": "^5.1.2",
