--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -24,7 +24,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "mocha",
+    "test": "mocha --require ignore-styles,babel-core/register",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
