--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.4.1",
     "chai": "^4.2.0",
     "dotenv": "^8.2.0",
+    "google-maps-react": "^2.0.2",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-datepicker": "^2.14.1",
