--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -20,6 +20,7 @@
     "react-paginate": "^6.3.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^2.1.8",
+    "react-youtube": "^7.11.1",
     "reactstrap": "^8.4.1"
   },
   "scripts": {
