--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap": "^1.0.0-beta.17",
     "react-datepicker": "^2.14.1",
     "react-dom": "^16.13.0",
+    "react-google-maps": "^9.4.5",
     "react-paginate": "^6.3.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^2.1.8",
